fixed bad visibility

--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -24,7 +24,7 @@ a:active {
 html,
 body {
   min-height: 100vh;
-  min-width: 100vh;
+  min-width: 100vw;
   line-height: 1;
   font-size: 14px;
   -ms-text-size-adjust: 100%;
@@ -223,7 +223,6 @@ body {
   display: -o-flex;
   display: flex;
   justify-content: space-between;
-  margin: 0px -10px;
 }
 .header-middle__image {
   margin: 0px 10px;
@@ -330,6 +329,7 @@ body {
 }
 
 .header__header-middle {
+  width: 100%;
   padding: 15px 0px;
   background-color: #fff;
   box-shadow: 0px 10px 20px rgba(59, 59, 59, 0.227);
@@ -653,7 +653,7 @@ body {
   }
 }
 
-@media (max-width: 680px) {
+@media (max-width: 780px) {
   .top-panel__body {
     justify-content: center;
     gap: 10px;
