--- a/pages/services/css/main.css
+++ b/pages/services/css/main.css
@@ -380,7 +380,9 @@
   padding: 50px 0px 75px 0px;
 }
 .toogle__body {
-  padding: 0px 100px 0px 100px;
+  max-width: 1100px;
+  padding: 0px 40px;
+  margin: 0 auto;
   user-select: none;
 }
 .toggle__item {
